[gd_scene load_steps=5 format=2]

[ext_resource path="res://Laser.gd" type="Script" id=1]
[ext_resource path="res://Sprites/circle_05.png" type="Texture" id=2]

[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 100, 1, 1 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
tangential_accel = 4.04
scale = 0.0
scale_random = 0.01
color = Color( 0, 0.76, 8.67, 0.47 )

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 1
emission_sphere_radius = 10.05
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.1
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.0
scale_random = 0.02
color = Color( 0, 0.76, 2.31, 0.55 )

[node name="Laser" type="RayCast2D"]
scale = Vector2( 0.292518, 0.292518 )
enabled = true
exclude_parent = false
cast_to = Vector2( 200, 0 )
collision_mask = 5
collide_with_areas = true
script = ExtResource( 1 )

[node name="Beam" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 200, 0 )
width = 3.666
default_color = Color( 0.8, 0.6, 10.98, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles" type="Particles2D" parent="."]
position = Vector2( 104, 0 )
amount = 64
local_coords = false
process_material = SubResource( 1 )
texture = ExtResource( 2 )

[node name="HitParticles" type="Particles2D" parent="."]
position = Vector2( 200, 0 )
amount = 64
local_coords = false
process_material = SubResource( 2 )
texture = ExtResource( 2 )

[node name="LifeTimer" type="Timer" parent="."]
autostart = true
